--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link rel="manifest" href="/assets/manifest.json">
 </head>
-<body>
+<body class="d-flex flex-column h-100">
   <app-root></app-root>
 </body>
 </html>
